@@ -1,7 +1,7 @@
 AC_PREREQ(2.53)
-AC_INIT(ghex, 2.5.0, http://bugzilla.gnome.org/enter_bug.cgi?product=ghex)
+AC_INIT(ghex, 2.5.1, http://bugzilla.gnome.org/enter_bug.cgi?product=ghex)
 AC_CONFIG_SRCDIR(src/ghex-window.c)
-AM_INIT_AUTOMAKE(ghex, 2.5.0)
+AM_INIT_AUTOMAKE(ghex, 2.5.1)
 AM_CONFIG_HEADER(config.h)
 
 AM_MAINTAINER_MODE
